--- a/pom.xml
+++ b/pom.xml
@@ -160,13 +160,14 @@
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
                 <artifactId>maven-jaxb2-plugin</artifactId>
                 <version>${maven-jaxb2-plugin.version}</version>
-                <executions>
+                <!--uncomment to generate stubs-->
+                <!--<executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>-->
                 <configuration>
                     <schemaLanguage>WSDL</schemaLanguage>
                     <generatePackage>com.sal.prompt.web.client.soap.stub</generatePackage>
