--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.spring.azure</groupId>
-    <artifactId>spring-azure</artifactId>
+    <artifactId>oracle-interface</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-azure</name>
-    <description>Demo project for Spring Boot with azure</description>
+    <description>Interface to transform source data to oracle</description>
     <properties>
         <java.version>11</java.version>
         <httpclient.version>4.5.4</httpclient.version>
@@ -56,7 +56,7 @@
             <version>1.2.1</version>
         </dependency>
 
-                <!-- spring-boot -->
+        <!-- spring-boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
@@ -65,6 +65,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+            </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
