upload zip to azure storage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ client:
       name: SAL_AZR_ERP_INT
       password: Welcome1
   rest:
-    default-uri: https://edco-test.fa.us2.oraclecloud.com/fscmRestApi/resources/11.13.18.05/commonLookupsLOV?q=LookupType=PROMPT_TEST
+    default-uri: https://edco-test.fa.us2.oraclecloud.com/fscmRestApi/resources/11.13.18.05/commonLookupsLOV?q=LookupType=
     user:
       name: SAL_AZR_ERP_INT
       password: Welcome1
